Complete and ready for review

--- a/AmusementParkPassGenerator/Base.lproj/Main.storyboard
+++ b/AmusementParkPassGenerator/Base.lproj/Main.storyboard
@@ -228,6 +228,9 @@
                                         <integer key="value" value="5"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="populateData" destination="BYZ-38-t0r" eventType="touchUpInside" id="RI0-UV-1kf"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
